fix title spacing on info pages

--- a/Source/src/app/shared/components/page-title/page-title.component.scss
+++ b/Source/src/app/shared/components/page-title/page-title.component.scss
@@ -1,5 +1,6 @@
 .page-title {
-  margin: 1em 0;
-  font-size: 30px;
+  margin: 0;
+  margin-top: 1em;
+  font-size: 2rem;
   font-weight: 600;
 }
